trying to fix cube so it doesn't clip in navbar on mobile

--- a/src/components/Cube/Cube.module.css
+++ b/src/components/Cube/Cube.module.css
@@ -157,8 +157,8 @@
 
 /* Small phones */
 @media screen and (max-width: 480px) {
-    .cube {
-       margin-top: 220px;
+    .container {
+        margin-top: 100px;
     }
 }
 
